--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
     command: mongod --noprealloc --smallfiles --oplogSize 16 --dbpath /data/db --noauth
     restart: always
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.8.1
     container_name: "elasticsearch"
     ports:
       - "9200:9200"
@@ -71,11 +71,23 @@ services:
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - discovery.type=single-node
+      - xpack.security.enabled=false
     volumes:
       - "./es:/usr/share/elasticsearch/data"
     networks:
       - wind-net
     restart: always
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:8.8.1
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    networks:
+      - wind-net
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
   nginx:
       container_name: "nginx"
       image: nginx:stable
